--- a/EpubProcess/Script/Res/message.xhtml
+++ b/EpubProcess/Script/Res/message.xhtml
@@ -9,27 +9,27 @@
 
 <body>
     <div>
-        <p class="meg">制作信息</p>
+        <p class="meg">製作信息</p>
 
         <p class="message">──────────────</p>
 
-        <p class="message">轻书架×天使动漫录入组</p>
-
         <p class="message">作者：{0}</p>
 
-        <p class="message">插画：{1}</p>
+        <p class="message">插畫：{1}</p>
 
-        <p class="message">图源：轻书架录入组</p>
+        <p class="message">圖源：輕書架錄入組</p>
 
-        <p class="message">录入：轻书架录入组</p>
+        <p class="message">錄入：無語</p>
 
-        <p class="message">轻书架：<a href="https://www.acgdmzy.com">https://www.acgdmzy.com</a></p>
+        <p class="message">製作：輕書架EPUB製作組</p>
 
-        <p class="message">仅供个人学习交流使用，禁作商业用途</p>
+        <p class="message">輕書架：<a href="https://www.acgdmzy.com">https://www.acgdmzy.com</a></p>
 
-        <p class="message">下载后请在24小时内删除，轻书架不负担任何责任</p>
+        <p class="message">僅供個人學習交流使用，禁作商業用途</p>
 
-        <p class="message">请尊重翻译、扫图、录入、校对的辛勤劳动，转载请保留资讯</p>
+        <p class="message">下載後請在24小時內刪除，輕書架不負擔任何責任</p>
+
+        <p class="message">請尊重翻譯、掃圖、錄入、校對的辛勤勞動，轉載請保留資訊</p>
 
         <p class="message">──────────────</p>
     </div>
