--- a/EpubProcess/Script/Res/message.xhtml
+++ b/EpubProcess/Script/Res/message.xhtml
@@ -15,15 +15,11 @@
 
         <p class="message">作者：{0}</p>
 
-        <p class="message">插畫：{1}</p>
-
-        <p class="message">圖源：輕書架錄入組</p>
+        <p class="message">圖源：輕書架</p>
 
         <p class="message">錄入：無語</p>
 
-        <p class="message">製作：輕書架EPUB製作組</p>
-
-        <p class="message">輕書架：<a href="https://www.acgdmzy.com">https://www.acgdmzy.com</a></p>
+        <p class="message">輕書架：<a href="https://www.lightnovel.app">https://www.lightnovel.app/</a></p>
 
         <p class="message">僅供個人學習交流使用，禁作商業用途</p>
 
