--- a/EpubProcess/Script/Res/message.xhtml
+++ b/EpubProcess/Script/Res/message.xhtml
@@ -19,7 +19,7 @@
 
         <p class="message">錄入：無語</p>
 
-        <p class="message">輕書架：<a href="https://www.lightnovel.app">https://www.lightnovel.app/</a></p>
+        <p class="message">輕書架：<a href="https://www.lightnovel.app">https://www.lightnovel.app</a></p>
 
         <p class="message">僅供個人學習交流使用，禁作商業用途</p>
 
