--- a/EpubProcess/Script/Res/message.xhtml
+++ b/EpubProcess/Script/Res/message.xhtml
@@ -15,6 +15,8 @@
 
         <p class="message">作者：{0}</p>
 
+        <p class="message">插畫：{1}</p>
+
         <p class="message">圖源：輕書架</p>
 
         <p class="message">錄入：無語</p>
